Fixed overlapping

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,5 @@ a {
 #tilegraph {
     position: relative;
     margin: auto;
+    height: 500px;
 }
-
-
